--- a/src/styles/addMovieForm.css
+++ b/src/styles/addMovieForm.css
@@ -34,7 +34,6 @@ select {
     padding: 15px !important;
     border-radius: 5px !important;
     width: 100%;
-    margin-bottom: 30px;
     color: black;
 }
 
@@ -78,36 +77,12 @@ label.light {
     display: inline;
 }
 
-.number {
-    background-color: #5fcf80;
-    color: #fff;
-    height: 30px;
-    width: 30px;
-    display: inline-block;
-    font-size: 0.8em;
-    margin-right: 4px;
-    line-height: 30px;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(225, 225, 225, 0.2);
-    border-radius: 100%;
-}
-
 @media screen and(min-width:720px) {
     form {
         max-width: 60%;
     }
 }
 
-span {
+p {
     color: red;
-    margin-bottom: 10px;
-    display: none;
-}
-
-input:invalid[focused= "true"] ~ span {
- display: block;
-}
-
-input:invalid[focused= "true"] {
-    border:  1px solid red;
 }
